# vlc-plugin-usm

./: .gitignore  CMakeLists.txt  PKGBUILD  README.md
packaging/arch/: PKGBUILD
src/: dll_entry.c  usm_chunk.c  usm_chunk.h  usm_crypto.c  usm_crypto.h  usm_ivf.c  usm_ivf.h  usm_keys.c  usm_keys.h  usm_plugin.c  usm_vlc_compat.h  usm_vlc_demux.h  usm_vlc_seek.c  usm_vlc_stream.c  usm_vlc_video.c  usm_vp9.c  usm_vp9.h
tests/: usm_core_tests.c
